# EECE5554

LAB0/: qian-w
LAB0/src/ros2_ws/log/: latest_build
LAB0/src/ros2_ws/src/my_package/: package.xml
LAB0/src/ros2_ws/src/py_pubsub/: setup.py
LAB0/src/ros2_ws/src/py_pubsub/py_pubsub/: publisher_member_function.py
LAB1/: LAB1_ROS2_Struct_Checker.py  minicom.cap
LAB1/install/: local_setup.sh  setup.sh
LAB1/install/gps_driver/share/gps_driver/: package.sh
LAB1/install/gps_driver/share/gps_driver/launch/: gps_launch.py
LAB1/install/gps_interface/share/gps_interface/: package.bash  package.sh  package.zsh
LAB1/install/gps_interface/share/gps_interface/cmake/: export_gps_interface__rosidl_generator_cppExport.cmake  export_gps_interface__rosidl_generator_pyExport-noconfig.cmake  export_gps_interface__rosidl_typesupport_fastrtps_cExport.cmake  gps_interface__rosidl_typesupport_introspection_cppExport.cmake
LAB1/install/gps_interface/share/gps_interface/msg/: GPSmsg.idl
LAB1/log/: latest_build
LAB1/src/: EECE5554 Lab1.docx
LAB1/src/analysis scripts/: RSN_Moving.mlx  RSN_Stationary.mlx  RSN_Stationary2.mlx
LAB1/src/data/: 2025-2-15-22-05-03.bag  2025-2-15-22-18-02.bag  2025-2-15-22-24-53.bag
LAB1/src/gps_driver/: CMakeLists.txt  package.xml  setup.py
LAB1/src/gps_driver/gps_driver/: driver.py
LAB1/src/gps_driver/launch/: standalone_driver.launch
LAB1/src/gps_driver/src/: gps_node.cpp  standalone_driver.py
LAB1/src/install/: local_setup.sh  setup.sh
LAB1/src/install/gps_driver/lib/gps_driver/: gps_node
LAB1/src/install/gps_driver/share/gps_driver/: package.sh  (+5 more)
LAB1/src/log/: latest_build
LAB2/analysis/: EECE5554 Lab2.docx  RSN_LAB2_Open.mlx
LAB2/data/: FLOATCOM4___9600_250221_202251.ubx  moving.ubx  westmove.ubx  westvillagestationary.ubx
LAB3/install/: local_setup.sh  setup.sh
LAB3/install/imu_driver/lib/imu_driver/: imu_driver
LAB3/install/imu_driver/share/imu_driver/: package.sh  package.xml
LAB3/install/imu_interface/share/imu_interface/: local_setup.sh  package.dsv  package.sh
LAB3/log/: latest_build
LAB3/src/analysis/: EECE5554 Lab3.docx  MovingDB3.mlx  ParseDB3.mlx  RosbAnalysis.py
LAB3/src/data/rosbag2_2025_03_21-18_54_56/: metadata.yaml
LAB3/src/data/rosbag2_2025_03_21-19_28_02/: metadata.yaml
LAB3/src/data/rosbag2_moving/: metadata.yaml
LAB3/src/imu_driver/: setup.py
LAB3/src/imu_driver/imu_driver/: CMakeLists.txt  imu_driver.py  package.xml
LAB3/src/imu_driver/install/: local_setup.sh  setup.sh
LAB3/src/imu_driver/launch/: imu.launch  imu_launch.py
LAB3/src/imu_driver/log/: latest_build
LAB3/src/imu_driver/msg/: IMUmsg.msg
LAB3/src/imu_interface/: CMakeLists.txt
LAB3/src/imu_interface/msg/: IMUmsg.msg
LAB3/src/install/: local_setup.sh  setup.sh
LAB3/src/log/: latest_build
LAB3/src/matlab_msg_gen/glnxa64/install/: local_setup.bash  local_setup.ps1  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
LAB3/src/matlab_msg_gen/glnxa64/log/: latest_build
LAB3/src/matlab_msg_gen/glnxa64/src/: VersionInfo.mat
LAB3/src/matlab_msg_gen/glnxa64/src/imu_interface/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
LAB3/src/matlab_msg_gen/glnxa64/src/imu_interface/include/imu_interface/: visibility_control.h
LAB4/: gps_imu_launch.py
LAB4/analysis/: EECE5554 Lab4.docx  Lab4Circles.mlx  Lab4P2.mlx  Lab4P3.mlx  Lab4Test.mlx
LAB4/data/data_driving2/: metadata.yaml
LAB4/data/data_going_in_circles2/: data_going_in_circles2.db3  metadata.yaml
LAB4/data/rosbag2_2025_03_21-17_08_01_0/: metadata.yaml
LAB4/src/gps_driver/launch/: gps_launch.py
LAB4/src/gps_interface/: CMakeLists.txt
LAB4/src/install/: local_setup.sh  setup.sh
LAB4/src/log/: latest_build
LAB4/src/matlab_msg_gen/glnxa64/install/: local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
LAB4/src/matlab_msg_gen/glnxa64/log/: latest_build
LAB4/src/matlab_msg_gen/glnxa64/src/: VersionInfo.mat
(+122 files in other folders)
